# CinemaStudio

./: CMakeLists.txt  README.md  build.sh
resources/: resources.qrc  theme.qss
src/: AudioMixer.cpp  AudioMixer.h  CommonTypes.h  EffectsPanel.cpp  EffectsPanel.h  ExportDialog.cpp  ExportDialog.h  FilterPanel.cpp  FilterPanel.h  MainWindow.cpp  MainWindow.h  MediaLibrary.cpp  MediaLibrary.h  Project.cpp  Project.h  PropertiesPanel.cpp  PropertiesPanel.h  TextTool.cpp  TextTool.h  Timeline.cpp  Timeline.h  TimelineClip.cpp  TimelineClip.h  TimelineTrack.cpp  TimelineTrack.h  Toolbar.cpp  Toolbar.h  UndoRedoManager.cpp  UndoRedoManager.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/core/: AudioTrack.cpp  AudioTrack.h  Clip.cpp  Clip.h  Effect.cpp  Effect.h  ProjectFile.cpp  ProjectFile.h  TextOverlay.cpp  TextOverlay.h  Track.cpp  Track.h  Transition.cpp  Transition.h
src/ffmpeg/: AudioDecoder.cpp  AudioDecoder.h  FFmpegEngine.cpp  FFmpegEngine.h  FilterGraph.cpp  FilterGraph.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
src/utils/: ThumbnailGenerator.cpp  ThumbnailGenerator.h  Utils.cpp  Utils.h  WaveformGenerator.cpp  WaveformGenerator.h
